--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"> 
     <title>Mogo</title>
+
 </head>
 
-<body>
+<body  background="images/fog-3622519_1920.jpg">
     <h1>Mogo</h1>
-    testyh
+
 </body>
 
 </html>
